--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,17 @@
   <title>Farman Anees Portfolio</title>
 </head>
 <body>
-
+<nav>
+    <button><a href="./Index.html">Home</a></button>
+    <button><a href="./Contact.html">Contact US</a></button>  
+</nav>
+<hr>
   <!-- Header -->
    
-  <div >
+  <div align="center">
       <h1>Farman Anees</h1>
+      <img src="./WhatsApp Image 2024-06-19 at 07.28.41_1b086cdf.jpg" alt="Farman Anees" width="220" height="250">
       <p>Web Developer | JavaScript | Express.js | MERN Stack Learner</p>
-      <img src="./WhatsApp Image 2024-06-19 at 07.28.41_1b086cdf.jpg" alt="Farman Anees" width="150" height="170">
   </div>
 
   <!-- About Section -->
@@ -84,16 +88,10 @@ and ensure operational efficiency. </p>
     <p>Using Html Tables tags and HTML Attributes</p>
     <a href="https://farman0234.github.io/Decibel-Login-page-/invoice.html" target="_blank">GitHub Link</a>
 
-  <!-- Contact Section -->
-  <hr>
-  <h2>Contact Me</h2>
-  <p>Email: farmananees2234@gmail.com</p>
-  <p>Phone: +92 300 1234567</p>
-  <p>Location: Lahore, Pakistan</p>
-
+  
   <!-- Footer -->
   <hr>
-  <p style="text-align: center;">© 2025 Farman Anees. All rights reserved.</p>
+  <p align="center">© 2025 Farman Anees. All rights reserved.</p>
 
 </body>
 </html>
