some updtaes in contact

--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </td>
         <td>
-          <form action="" onsubmit="handleSubmit(event);">
+          <form action="" onsubmit="handleSubmit(); return false;">
             <h1>
               &nbsp; &nbsp;&nbsp; &nbsp;FULL FREE TO CONTACT US &nbsp;
               &nbsp;&nbsp; &nbsp;
