adding styling and javascript

--- a/Index.html
+++ b/Index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Farman Anees Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <nav>
@@ -12,7 +13,7 @@
 <hr>
   <!-- Header -->
    
-  <div align="center">
+  <div class="centere">
       <h1>Farman Anees</h1>
       <img src="./WhatsApp Image 2024-06-19 at 07.28.41_1b086cdf.jpg" alt="Farman Anees" width="220" height="250">
       <p>Web Developer | JavaScript | Express.js | MERN Stack Learner</p>
@@ -77,7 +78,9 @@ and ensure operational efficiency. </p>
 
   <!-- Projects Section -->
   <hr>
+  
   <h2>My Projects</h2>
+  <div>
     <h3>Invoice Slip</h3>
     <p>Using Html Tables tags and HTML Attributes</p>
     <a href="https://farman0234.github.io/Invoice-Slip/invoice.html" target="_blank">GitHub Link</a>
@@ -91,7 +94,7 @@ and ensure operational efficiency. </p>
   
   <!-- Footer -->
   <hr>
-  <p align="center">© 2025 Farman Anees. All rights reserved.</p>
+  <p class="footer">© 2025 Farman Anees. All rights reserved.</p>
 
 </body>
 </html>
